--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 //setting user session
                 localStorage.setItem('data', JSON.stringify({ token: data.token }));
                 //redirecting user to the account page
-                window.location.href = '/account';
+                window.location.href = '/';
             }
         });
     </script>
