--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 
 <head>
+    <title>Demo site for OwnID</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        div {
+            text-align: center;
+        }
+
+        input {
+            align-self: center;
+        }
+    </style>
+    <script>
+        // Include ownid sdk
+        ((o, w, n, i, d) => {
+            o[i] = o[i] || (async (...a) => ((o[i].q = o[i].q || []).push(a), { error: null, data: null })),
+                (d = w.createElement("script")).src = 'https://cdn.ownid.com/sdk/' + n, d.async = 1, w.head.appendChild(d)
+        })
+            (window, document, '0lhf27b6qgc99e', 'ownid');
+    </script>
+    <script>
+        // Own ID start
+        ownid('start', {
+            providers: {
+                session: {
+                    create: async (data) => {
+                        try {
+                            // set user session using data.token (usually a jwt or session token), generated in your backend and sent through the OwnID server
+                            await this.authService.onLogin(data);
+
+                            return { status: 'logged-in' };
+                        } catch (error) {
+                            return { status: 'fail', reason: 'Failed to create session' };
+                        }
+                    },
+                },
+                events: {
+                    onFinish: async () => ({ action: 'redirect', url: "/my-account" })
+                }
+            }
+        });
+
+    </script>
+    <script>
+        function logout() {
+            if (localStorage.getItem('data') === null) {
+                alert("Youre already logged out");
+            } else {
+                localStorage.setItem('data', null);
+                alert("Logged out!")
+            }
+        };
+
+
+    </script>
 </head>
 
 <body>
+    <div>
+        <h1>Hi there! go away</h1>
 
+        <iframe src="https://giphy.com/embed/dNKoBpFpIFnr2" width="480" height="365" style="" frameBorder="0"
+            class="giphy-embed" allowFullScreen></iframe>
+        <p><a href="https://giphy.com/gifs/dNKoBpFpIFnr2">via GIPHY</a></p>
 
-    <input type="button" value="Login" onclick="location.href='./login.html'" />
-
-
-    <input type="button" value="Register" onclick="location.href='./register.html'" />
-
-
-
+        <input type="button" value="Logout" onclick="return logout()" />
+    </div>
 </body>
