--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             },
         };
         const events = {
-            onFinish: async () => ({ action: 'redirect', url: pathArr.join('/') }),
+            onFinish: async () => ({ action: 'redirect', url: '/' }),
             onAccountNotFound: async () => {
-                return { action: 'redirect', url: pathArr.join('/') };
+                return { action: 'redirect', url: '/' };
             },
         };
 
