--- a/register.html
+++ b/register.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script>
         ((o, w, n, i, d) => {
             o[i] = o[i] || (async (...a) => ((o[i].q = o[i].q || []).push(a), { error: null, data: null })),
@@ -8,18 +10,29 @@
         })
             (window, document, '0lhf27b6qgc99e', 'ownid');
     </script>
+    <style>
+        div {
+            text-align: center;
+        }
+        #submit {
+            background-color: greenyellow;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Register</h1>
-    <form name="myForm" onsubmit="onSubmit(); return false;">
-        <label for="email">Email:</label>
-        <input id="email" type="text" name="email"><br>
-        <label for="password">Password:</label>
-        <input id="password" type="password" name="password"><br>
-        <input type="submit" value="Submit"><br>
-    </form>
-    <input type="button" value="Back" onclick="location.href='./index.html'">
+    <div>
+        <h1>Register</h1>
+        <form name="myForm" onsubmit="onSubmit(); return false;">
+            <label for="email">Email:</label>
+            <input id="email" type="text" name="email"><br>
+            <label for="password">Password:</label>
+            <input id="password" type="password" name="password"><br>
+            <input type="button" value="Back" onclick="location.href='./index.html'">
+            <input type="submit" value="Submit" id="submit">
+        </form>
+        
+    </div>
     <script>
         var ownIdDataString;
 
@@ -27,7 +40,7 @@
             //Call your existing registration logic in the backend
             const username = document.getElementById("email").value;
             const password = document.getElementById("password").value;
-            const body = { username: username, password: password , ownid_data: ownIdDataString}
+            const body = { username: username, password: password, ownid_data: ownIdDataString }
             resp = await fetch(`https://obliging-swan-trivially.ngrok-free.app/register`, { method: "POST", body: JSON.stringify(body) });
 
             resp.ok ? alert("User registered succefully") : alert("Unauthenticated");
