--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </script>
     <script>
         function logout() {
-            if (localStorage.getItem('token') === null) {
+            if (localStorage.getItem('token') === 'null') {
                 alert("Youre already logged out");
             } else {
                 localStorage.setItem('token', null);
