refresh window after logour

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             } else {
                 localStorage.setItem('token', null);
                 alert("Logged out!")
+                window.location.reload();
             }
         };
 
