refresh window after logour

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             if (localStorage.getItem('token') === null) {
                 alert("Youre already logged out");
             } else {
-                localStorage.removeItem('token')
-                alert("Logged out!")
-                window.location.reload
+                localStorage.removeItem('token');
+                alert("Logged out!");
+                window.location.reload();
             }
         };
 
